--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Blog
+title: Web Hosting Blog
 SEOTitle: Web Hosting | BY Blog
 header-img: img/post-bg-desk.jpg
 # email: qiubaiying@gmail.com
